fix white space wrapping in carousel cards

--- a/sandbox/public/css/styles.css
+++ b/sandbox/public/css/styles.css
@@ -1143,7 +1143,7 @@ a.ps-button--ghost {
   width: 100%;
   text-align: center;
   margin-right: 1.6rem;
-  white-space: initial;
+  white-space: normal;
   display: inline-block;
   padding: 2.5rem 1.6rem;
   position: relative; }
