--- a/sandbox/src/components/slider-carousel/slider-carousel.scss
+++ b/sandbox/src/components/slider-carousel/slider-carousel.scss
@@ -27,7 +27,7 @@
   width: 100%;
   text-align: center;
   margin-right: 1.6rem; // for no-js
-  white-space: initial;
+  white-space: normal;
   display: inline-block;
 
 
